Added the CuadroMagicoLogica class and added the gui in the CuadroMagico class

--- a/src/main/resources/estilos/main.css
+++ b/src/main/resources/estilos/main.css
@@ -38,3 +38,11 @@
     -fx-background-color: #000;
     -fx-text-fill: black;
 }
+
+.button:hover{
+    -fx-background-color: blue;
+}
+
+.gridpane{
+    -fx-background-color:red;
+}
