--- a/src/main/resources/estilos/main.css
+++ b/src/main/resources/estilos/main.css
@@ -1,5 +1,5 @@
 .root{
-    -fx-background-image: url('https://wallpapercave.com/wp/wp6599912.jpg'), url('https://www.tecnm.mx/images/tecnm_virtual/tecnm.png');
+    -fx-background-image: url('https://i.4cdn.org/w/1677633088560442.jpg'), url('https://i.4cdn.org/w/1709117808658005.png');
     -fx-background-size: 100%, 200px;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center, bottom right;
@@ -40,9 +40,5 @@
 }
 
 .button:hover{
-    -fx-background-color: blue;
-}
-
-.gridpane{
-    -fx-background-color:red;
+    -fx-background-color: rgb(90,70,10);
 }
