--- a/src/main/resources/estilos/cuadromagico.css
+++ b/src/main/resources/estilos/cuadromagico.css
@@ -1,6 +1,10 @@
 .root{
-    -fx-background-image: url('https://i.4cdn.org/w/1677633088560442.jpg'), url('https://i.4cdn.org/w/1709117808658005.png');
-    -fx-background-size: 100%, 200px;
+    -fx-background-image: url('https://i.4cdn.org/w/1709038154516331.png');
+    -fx-background-size:500px;
     -fx-background-repeat: no-repeat;
-    -fx-background-position: center, bottom right;
+    -fx-background-position: center;
+}
+
+.button:hover{
+    -fx-background-color: rgb(200,70,10);
 }
