--- a/src/main/resources/estilos/main.css
+++ b/src/main/resources/estilos/main.css
@@ -1,5 +1,5 @@
 .root{
-    -fx-background-image: url('https://i.4cdn.org/w/1677633088560442.jpg'), url('https://i.4cdn.org/w/1709117808658005.png');
+    -fx-background-image: url('https://i.4cdn.org/w/1715726873174827.png'), url('https://i.4cdn.org/w/1710758569147678.png');
     -fx-background-size: 100%, 200px;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center, bottom right;
